# cmaketest

./: CMakeLists.txt  config.h  main.cpp
src/: main.c
